refactored Feign Client and added Exception handling
